# authkeeper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/authkeeper/: __init__.py  __main__.py  app.py  cli.py
src/authkeeper/core/: __init__.py  crypto.py  database.py  models.py
src/authkeeper/services/: auto_lock.py  clipboard.py  password_generator.py  vault.py
src/authkeeper/ui/: __init__.py
src/authkeeper/ui/screens/: __init__.py  dashboard.py  entry_form.py  login.py
src/authkeeper/ui/styles/: app.tcss
src/authkeeper/ui/widgets/: __init__.py
src/authkeeper/utils/: __init__.py  config.py
tests/: __init__.py  test_crypto.py  test_password_generator.py
