[project]
name = "authkeeper"
version = "0.1.0"
description = "Professional terminal password manager with encrypted storage and modern TUI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AuthKeeper Team" }
]
keywords = ["password-manager", "security", "encryption", "tui", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "apsw>=3.45.0",
    "textual>=0.50.0",
    "thefuzz>=0.22.0",
    "pyperclip>=1.8.0",
    "pydantic>=2.6.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
authkeeper = "authkeeper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authkeeper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
